@startuml
package com.finekuo.logging.controller {
  class LoggingController {
    +getLog(request: GetLogRequest): BaseResponse<GetLogResponse>
  }

  class GetLogRequest {
    -string: String
    -integer: Integer
    -rocId: String
    +getString(): String
    +getInteger(): Integer
    +getRocId(): String
  }

  class GetLogResponse {
    -string: String
    -integer: Integer
    -rocId: String
    -roc_id: String
    -account_number: String
    -credit_card_number: String
    +setString(s: String): void
    +setInteger(i: Integer): void
    +setRocId(r: String): void
    ' other setters
  }
}

package com.finekuo.normalcore.dto.response {
  class BaseResponse<T> {
    +code: String
    +message: String
    +data: T
    +static success(data: T): BaseResponse<T>
  }
}

com.finekuo.logging.controller.LoggingController ..> com.finekuo.logging.controller.GetLogRequest : uses as parameter
com.finekuo.logging.controller.LoggingController ..> com.finekuo.logging.controller.GetLogResponse : creates and uses
com.finekuo.logging.controller.LoggingController ..> com.finekuo.normalcore.dto.response.BaseResponse : uses
com.finekuo.normalcore.dto.response.BaseResponse o-- com.finekuo.logging.controller.GetLogResponse : (T is GetLogResponse)
@enduml
